# StochasticPackageQuery

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bestObj.txt  bestObj3.txt  conanfile.py  conanfile.txt  config.cfg  experiment.sh  log  log.txt  reducedId4.txt  reducedIds.txt  reducedIds3.txt  requirements.txt  run.sh  setup.sh
resource/: sqls.py  stocks.py
resource/sqls/: ebnf.spaql  portfolio.spaql  stocks.spaql
resource/stocks/: tickers.ini
src/: modelCVaRLP.lp  modelDetLP.lp
src/core/: checker.cpp  checker.hpp  kde.cpp  kde.hpp  mapop.hpp  optim.cpp  optim.hpp  stat.cpp  stat.hpp
src/solver/: CurveFit.cpp  CurveFit.hpp  Naive.cpp  Naive.hpp  RobustSatisficing.cpp  RobustSatisficing.hpp  StochDualReducer.cpp  StochDualReducer.hpp  SummarySearch.cpp  SummarySearch.hpp  solversCore.hpp  starter.cpp  starter.hpp  taylor.cpp  taylor.hpp  try3.lp
src/spq/: bounder.cpp  bounder.hpp  cons.cpp  cons.hpp  formulator.cpp  formulator.hpp  naiveformulator.cpp  naiveformulator.hpp  obj.cpp  obj.hpp  parser.hpp  rsformulator.cpp  rsformulator.hpp  sdrformulator.cpp  sdrformulator.hpp  spq.cpp  spq.hpp  ssformulator.cpp  ssformulator.hpp  stat.cpp  stat.hpp
src/util/: data.hpp  fileio.cpp  fileio.hpp  uconfig.cpp  uconfig.hpp  udebug.cpp  udebug.hpp  udeclare.cpp  udeclare.hpp  uio.cpp  uio.hpp  unumeric.cpp  unumeric.hpp
stochastic-sketchrefine/: LICENSE  README.md  UnitTestRunner.py  hardnessExp.py  main.py  results.json  scenario_generation_demo.py  stocks_3_2.json  stocks_3_4.json  stocks_3_4_2.json  stocks_3_4_3.json  stocks_3_4_4.json  stocks_3_4_RCL_0.json  stocks_3_4_RCL_1.json  stocks_3_4_RCL_2.json  stocks_3_4_SS_3.json  stocks_4_2.json
stochastic-sketchrefine/CVaRification/: CVaRification.py  CVaRificationSearchResults.py  QuickSolve.py  RCLSolve.py  StaircaseCVaRification.py
stochastic-sketchrefine/Data/: database.ini  dataset_creator.sh  indexify.py  indexify.sql  init.sql  portfolio.csv  table_builder.py  table_populator.py
stochastic-sketchrefine/DbInfo/: DbInfo.py  PortfolioInfo.py  TpchInfo.py
stochastic-sketchrefine/Hyperparameters/: Hyperparameters.py
stochastic-sketchrefine/Naive/: Naive.py
stochastic-sketchrefine/OfflinePreprocessing/: DistPartition.py  MeanAbsoluteDistance.py  MeanAbsoluteDistanceUnitTest.py  MonotonicDeque.py  MonotonicDequeUnitTest.py  OptimalPartitioning.py  OptimalPartitioningUnitTest.py  PivotScan.py  PivotScanUnitTest.py
stochastic-sketchrefine/OptimizationMetrics/: OfflinePreprocessingMetrics.py  OptimizationMetrics.py
stochastic-sketchrefine/PgConnection/: PgConnection.py  PgConnectionUnitTest.py
stochastic-sketchrefine/Plotter/: mixed_distribution_plotter.py  partition_plotter.py  plotter.py  plotter_combined.py  plotter_log.py  plotter_single.py
stochastic-sketchrefine/QueryHardness/: HardnessEvaluator.py  RCLSolveBasedHardness.py
stochastic-sketchrefine/ScenarioGenerator/: ScenarioGenerator.py  ScenarioGeneratorUnitTest.py
stochastic-sketchrefine/SeedManager/: SeedManager.py
stochastic-sketchrefine/SketchRefine/: Refine.py  RefineRCLSolve.py  RefineValidator.py  Sketch.py  SketchRCLSolve.py  SketchRefine.py  SketchValidator.py
stochastic-sketchrefine/StochasticPackageQuery/: Query.py  QueryUnitTest.py
stochastic-sketchrefine/SummarySearch/: SummarySearch.py
stochastic-sketchrefine/Utils/: ArcTangent.py  Databases.py  GurobiLicense.py  Heap.py  HeapUnitTest.py  ObjectiveType.py  Relation_Prefixes.py  RelationalOperators.py  Stochasticity.py  TailType.py  UtilsUnitTest.py
stochastic-sketchrefine/Validator/: Validator.py
stochastic-sketchrefine/ValueGenerator/: RepresentativeValueGenerator.py  ValueGenerator.py  ValueGeneratorUnitTest.py
test/: CurveFit2.cpp  data.csv  dataStocks_3_2_DualRed.csv  dataStocks_3_2_eps050.csv  dataStocks_3_4.csv  dataStocks_4_2.csv  dataStocks_4_2_DualRed.csv  dataStocks_4_2_DualRed_eps040.csv  dataStocks_4_2_eps045.csv  dataStocks_4_4_PROBA.csv  debug_output.txt  epsilonVsObjective.csv  experiments.cpp  hello.cpp  main.cpp  output.txt  sqls.py  stocks.py
test/BinarySearchCurveFit/: SSvsNaive_3_2_eps046.csv  SSvsNaive_3_4_eps046.csv  SSvsNaive_4_2_eps046.csv  dataStocks_3_2_eps046.csv
test/BinarySearchExperiments/: binarySearch_3_2_NoCntConst_eps040.csv  binarySearch_3_4_NoCntConst_eps040.csv  binarySearch_4_2_NoCntConst_eps040_q500.csv  binarySearch_4_2_NoCntConst_eps045_q500.csv  binarySearch_4_4_NoCntConst_eps040_q500.csv
(+1670 files in other folders)
